// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.loadtest;

import "google/type/date.proto";

option java_package = "org.wfanet.measurement.internal.loadtest";
option java_multiple_files = true;

// Input VID data for sketch generation within Correctness Test.
message LabeledEvent {
  // Identifier of the publisher.
  int64 publisher_id = 1;

  // Identifier of the event.
  int64 event_id = 2;

  // Type of sex.
  enum Sex {
    SEX_UNSPECIFIED = 0;
    MALE = 1;
    FEMALE = 2;
  }
  // Sex of the person.
  Sex sex = 3;

  // Type of Age Group.
  enum AgeGroup {
    AGE_GROUP_UNSPECIFIED = 0;

    // Ages between 18 to 34 inclusive.
    _18_34 = 1;

    // Ages between 35 to 54 inclusive.
    _35_54 = 2;

    // Ages 55 and older.
    _55 = 3;
  }
  // Age group of the person.
  AgeGroup age_group = 4;

  // Type of Social Grade.
  enum SocialGrade {
    SOCIAL_GRADE_UNSPECIFIED = 0;
    ABC1 = 1;
    C2DE = 2;
  }
  // Social grade of the person.
  SocialGrade social_grade = 5;

  // Type of Complete.
  enum Complete {
    COMPLETE_UNSPECIFIED = 0;
    INCOMPLETE = 1;
    COMPLETE = 2;
  }
  Complete complete = 6;

  // Virtual ID of the person.
  int64 vid = 7;

  // Date of the impression.
  google.type.Date date = 8;
}
