
// Copyright 2025 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.reporting.v2;

option java_package = "org.wfanet.measurement.internal.reporting.v2";
option java_multiple_files = true;

// Metrics that are applicable to any subunit of the ReportingUnit.
message BasicMetricSet {
  // The reach
  int32 reach = 1;
  // The reach divided by the population_size
  float percent_reach = 2;
  // The k+ reach where the index is frequency - 1.
  repeated int32 k_plus_reach = 3;
  // The percent k+ reach
  repeated float percent_k_plus_reach = 4;
  // The average frequency
  float average_frequency = 5;
  // The impression count
  int32 impressions = 6;
  // The gross ratings points
  float grps = 7;
}
